--- a/website/index.html
+++ b/website/index.html
@@ -7,6 +7,11 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <style type="text/css">
+            body {
+                padding-top: 40px;
+            }
+        </style>
 
         <script>
          "use strict";
@@ -32,7 +37,6 @@
 
     </head>
     <body>
-
         <div class="container">
             <h1>Is your review positive, or negative?</h1>
             <p>Enter your review below and click submit to find out...</p>
