--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,7 @@
         <style type="text/css">
             body {
                 padding-top: 40px;
+                padding-left: 10px;
             }
         </style>
 
